log
Sun 23 Apr 2023 05:25:46 PM UTC: 
 tests:  0|6
total_score: 0/70
22870eb
Sun 23 Apr 2023 05:45:01 PM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
422c672
Sun 23 Apr 2023 05:45:22 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  1|5
total_score: 10/70
88bcacd
Sun 23 Apr 2023 06:06:31 PM UTC: 
 hashmap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:22: error: array subscript is not an integer
   45 |   while (map->buckets[hash] && !0)
      |                      ^
hashmap.c:47:25: error: array subscript is not an integer
   47 |         if (map->buckets[hash]->key && strcmp(map->buckets[hash]->key, key) == 0) return;
      |                         ^
hashmap.c:47:59: error: array subscript is not an integer
   47 |         if (map->buckets[hash]->key && strcmp(map->buckets[hash]->key, key) == 0) return;
      |                                                           ^
hashmap.c:44:8: error: unused variable ‘inicialhash’ [-Werror=unused-variable]
   44 |   long inicialhash = hash(key, map->capacity);
      |        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
38c65ad
Sun 23 Apr 2023 06:06:49 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
1dc765c
Sun 23 Apr 2023 06:09:20 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:3: error: expected expression before ‘}’ token
   50 |   }
      |   ^
hashmap.c:50:3: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f5a97d3
Sun 23 Apr 2023 06:11:14 PM UTC: 
 hashmap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:16: error: assignment to ‘long int’ from ‘long int (*)(char *, long int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   55 |   map->current = hash;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
1522f89
Sun 23 Apr 2023 06:14:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:46: error: array subscript is not an integer
   45 |   while (map->buckets[indice] && map->buckets[index]->key != NULL)
      |                                              ^
hashmap.c:55:16: error: assignment to ‘long int’ from ‘long int (*)(char *, long int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   55 |   map->current = hash;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9c32fd4
Sun 23 Apr 2023 06:14:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:16: error: assignment to ‘long int’ from ‘long int (*)(char *, long int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   55 |   map->current = hash;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
faeb68f
